--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ Description: A package to perform differential network analysis, differential no
 License: GLP-2
 Depends: Hmisc, psych, igraph, pathview, plyr
 RoxygenNote: 6.0.1.9000
+URL: http://github.com/jardimViniciusC/BioNetStat
+BugReports: http://github.com/jardimViniciusC/BioNetStat/issues
