modificando arquivos de Rd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(averageShortestPath)
 export(betweennessCentrality)
 export(betweennessCentralityTest)
 export(betweennessCentralityVertexTest)
+export(centralityPathPlot)
 export(closenessCentrality)
 export(closenessCentralityTest)
 export(closenessCentralityVertexTest)
@@ -24,12 +25,15 @@ export(degreeCentralityTest)
 export(degreeCentralityVertexTest)
 export(degreeDensities)
 export(degreeDistributionTest)
+export(diffNetAnalysis)
+export(doLabels)
 export(eigenvectorCentrality)
 export(eigenvectorCentralityTest)
 export(eigenvectorCentralityVertexTest)
-export(invWeigthts)
 export(nDegreeDensities)
+export(pathPlot)
 export(readGmtFile)
+export(readVarFile)
 export(shortestPathTest)
 export(spectralDensities)
 export(spectralDistributionTest)
