--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,4 @@ Depends: Hmisc, psych, igraph, pathview, plyr
 RoxygenNote: 6.0.1.9000
 URL: http://github.com/jardimViniciusC/BioNetStat
 BugReports: http://github.com/jardimViniciusC/BioNetStat/issues
+ADD: test
