adequation to R CDM build, check and biocheck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(JS)
 export(JSdegree)
-export(JSspectrum)
 export(adjacencyMatrix)
 export(averageBetweennessCentrality)
 export(averageClosenessCentrality)
@@ -35,8 +34,12 @@ export(pathPlot)
 export(readGmtFile)
 export(readVarFile)
 export(shortestPathTest)
-export(spectralDensities)
 export(spectralDistributionTest)
 export(spectralEntropies)
 export(spectralEntropyTest)
-import(igraph)
+import("igraph","plyr","shiny","RJSONIO","ggplot2","pathview","pheatmap","whisker","yaml","RColorBrewer","shinyBS")
+importFrom("stats", "aggregate", "bw.nrd0", "cor", "density", "dist",
+             "median", "p.adjust")
+importFrom("utils", "read.csv", "read.table")
+importFrom("Hmisc","rcorr")
+importFrom("psych","corr.test")
