--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: BioNetStat
 Type: Package
 Title: Biological Network Analysis
-Version: 1.0
-Date: 2017-07-06
+Version: 0.99.0
+Date: 2018-02-28
 Author: Vinicius Jardim Carvalho and Suzana de Siqueira Santos
 Maintainer: Vinicius Jardim <viniciusjcarvalho@hotmail.com>
 Description: A package to perform differential network analysis, differential node analysis (differential coexpression analysis), network and metabolic pathways view.
-License: GLP-2
-Depends: Hmisc, psych, igraph, pathview, plyr
+License: GPL (>= 3)
+Depends: R (>= 3.4), shiny (>= 0.8.0), igraph, shinyBS,RColorBrewer
+Imports: Hmisc, psych, RJSONIO, whisker, yaml, pheatmap, ggplot2, pathview, plyr, util, stats
 RoxygenNote: 6.0.1.9000
 URL: http://github.com/jardimViniciusC/BioNetStat
 BugReports: http://github.com/jardimViniciusC/BioNetStat/issues
