--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,10 @@ Maintainer: Vinicius Jardim <viniciusjc@gmail.com>
 Description: A package to perform differential network analysis, differential node analysis (differential coexpression analysis), network and metabolic pathways view.
 License: GPL (>= 3)
 Depends: R (>= 3.4), shiny (>= 0.8.0), igraph, shinyBS, pathview
-Imports: BiocParallel, RJSONIO, whisker, yaml, pheatmap, ggplot2, plyr, utils, stats, RColorBrewer, Hmisc, psych
+Imports: BiocParallel, RJSONIO, whisker, yaml, pheatmap, ggplot2, plyr, utils, stats, RColorBrewer, Hmisc, psych, knitr
 biocViews: Network, NetworkInference, Pathways, GraphAndNetwork, Sequencing, Microarray, Metabolomics, Proteomics, GeneExpression, RNASeq, SystemsBiology, DifferentialExpression, GeneSetEnrichment
 RoxygenNote: 6.0.1.9000
 URL: http://github.com/jardimViniciusC/BioNetStat
 BugReports: http://github.com/jardimViniciusC/BioNetStat/issues
+Encoding: UTF-8
+VignetteBuilder: knitr
