--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: BioNetStat
 Type: Package
 Title: Biological Network Analysis
-Version: 1.5.1
+Version: 1.5.2
 Author: Vinícius Jardim, Suzana Santos, André Fujita, and Marcos Buckeridge
 Maintainer: Vinicius Jardim <viniciusjc@gmail.com>
-Description: A package to perform differential network analysis, differential node analysis (differential coexpression analysis), network and metabolic pathways view.
+Description: A package to perform differential network analysis, differential node analysis (differential coexpression analysis), network and metabolic pathways view. The reference paper is avaible in https://doi.org/10.3389/fgene.2019.00594.
 License: GPL (>= 3)
 Depends: R (>= 3.5), shiny, igraph, shinyBS, pathview
 Imports: BiocParallel, RJSONIO, whisker, yaml, pheatmap, ggplot2, plyr, utils, stats, RColorBrewer, Hmisc, psych, knitr
