changing the NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,7 @@ export(eigenvectorCentralityVertexTest)
 export(nDegreeDensities)
 export(nSpectralDensities)
 export(pathPlot)
-export(readGmtFile)
+export(readSetFile)
 export(readVarFile)
 export(runBioNetStat)
 export(spectralDistributionTest)
