--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: BioNetStat
 Type: Package
 Title: Biological Network Analysis
-Version: 1.9.3
+Version: 1.9.4
 Author: Vinícius Jardim, Suzana Santos, André Fujita, and Marcos Buckeridge
 Maintainer: Vinicius Jardim <viniciusjc@gmail.com>
 Description: A package to perform differential network analysis, differential node analysis (differential coexpression analysis), network and metabolic pathways view.
 License: GPL (>= 3)
-Depends: R (>= 3.5), shiny, igraph, shinyBS, pathview
+Depends: R (>= 3.5), shiny, igraph, shinyBS, pathview, DT
 Imports: BiocParallel, RJSONIO, whisker, yaml, pheatmap, ggplot2, plyr, utils, stats, RColorBrewer, Hmisc, psych, knitr
 biocViews: Network, NetworkInference, Pathways, GraphAndNetwork, Sequencing, Microarray, Metabolomics, Proteomics, GeneExpression, RNASeq, SystemsBiology, DifferentialExpression, GeneSetEnrichment, ImmunoOncology
 RoxygenNote: 6.1.1
